Create worker, Create Use Case, Create ViewModel

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Astronomy Picture of the Day</string>
+    <string name="lbl_transform_to_64">Transform URL</string>
+    <string name="lbl_down_pic_day">Download Picture Day</string>
 </resources>
