Interface Compose, two screens

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,6 @@
     <string name="app_name">Astronomy Picture of the Day</string>
     <string name="lbl_transform_to_64">Transform URL</string>
     <string name="lbl_down_pic_day">Download Picture Day</string>
+    <string name="lbl_down_failed">Download Picture Failed</string>
+    <string name="lbl_down_finished">Task Download Finished</string>
 </resources>
